# ai-counselor

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: ci.yml
src/: main.py
src/domain/: message.py  prompt.py  user_id.py
src/domain/repository/: conversation_history_repository_interface.py  generate_message_repository_interface.py
src/infrastructure/: openai.py
src/infrastructure/repository/aiomysql/: aiomysql_conversation_history_repository.py
src/infrastructure/repository/openai/: openai_generate_message_repository.py
src/log/: logger.py
src/presentation/: request_id.py
src/presentation/controller/: generate_message_controller.py
src/presentation/router/: health_checks.py  messages.py
src/usecase/: generate_message_use_case.py
tests/db/: create_and_setup_db_connection.py
tests/domain/user_id/: test_is_user_id.py
tests/infrastructure/repository/aiomysql/aiomysql_conversation_history_repository/: test_create_messages_with_conversation_history.py  test_save_conversation_history.py
tests/presentation/router/: test_health_checks.py
